# cppUniversalFrom

./: CMakeLists.txt  Prompt.md
src/: AddEntry.cpp  AddEntry.h  CreateNewForm.cpp  CreateNewForm.h  DeleteEntry.cpp  DeleteEntry.h  DeleteForm.cpp  DeleteForm.h  EditEntry.cpp  EditEntry.h  Entry.cpp  Entry.h  FormDefinition.cpp  FormDefinition.h  SaveAsCSV.cpp  SaveAsCSV.h  SaveAsJSON.cpp  SaveAsJSON.h  SaveAsSQL.cpp  SaveAsSQL.h  SelectAndUseForm.cpp  SelectAndUseForm.h  ViewEntry.cpp  ViewEntry.h  main.cpp
test/: test_CreateNewForm.cpp
